# ptyrad

./: .condaignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  WISHLIST.md  pyproject.toml
.github/workflows/: interface_tests.yml  publish_pypi.yml
demo/data/: data_url.txt
demo/params/: PSO_hypertune.yml  PSO_reconstruct.yml  PSO_reconstruct_linduda.yml  PSO_reconstruct_ms.yml  tBL_WSe2_hypertune.yml  tBL_WSe2_reconstruct.yml  tBL_WSe2_reconstruct_minimal.yml  tBL_WSe2_reconstruct_minimal_parallel.yml  tBL_WSe2_tuned.yml
demo/scripts/: grid_reconstructions.py  hyper_param_tune.py  run_ptyrad_detailed_walkthrough.ipynb  run_ptyrad_quick_example.ipynb  slurm_run_ptyrad.sub  split_data_for_frc.ipynb  test_linduda.py
docs/: changelog.md  conf.py  index.md  installation.md  overview.md  quickstart.md  requirements.txt
docs/_static/: custom.css  custom.js
docs/_templates/: custom-class-template.rst  custom-module-template.rst
docs/api/: index.md
docs/examples/: PSO.yaml  index.md  tBL_WSe2.yaml
docs/launch/: cli.md  hypertune.md  index.md  multiGPU.md  python.md  slurm.md
docs/params/: constraint_p.md  hypertune_p.md  index.md  init_p.md  loss_p.md  model_p.md  recon_p.md
docs/templates/: advanced.yaml  full.yaml  minimal.yaml
notebooks/: get_error_distribution.ipynb
recipe/: meta.yaml
release/: README.md  RELEASE_CHECKLIST.md  run_integration_matrix.sh  run_release_benchmarks.py  test_conda_packaging.sh  test_pypi_packaging.sh  validate_all_params.py
test/: FINAL_REPORT.md  __init__.py  conftest.py  test_cli.py  test_constraints.py  test_forward.py  test_load.py  test_losses.py  test_models.py  test_reconstruction.py  test_save.py  utils.py
tools/: test_all_walkthrough.py  validate_all_params.py
(+111 files in other folders)
